<resources>
    <string name="app_name">Jarvis</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_home">Home</string>
    <string name="action_rewards">Rewards</string>
    <string name="action_appliances">Appliances</string>
    <string name="action_profile">Profile</string>
    <string name="action_reminder">Reminder</string>
    <string name="action_detection">Detection</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="create_account">Create Account</string>
    <string name="update_profile">Update Profile</string>
    <string name="triggers_detail_when">When:</string>
    <string name="triggers_detail_duration">For More Than:</string>
    <string name="triggers_detail_action">Do This:</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="first_name_hint">First Name</string>
    <string name="email_hint">Email Address</string>
    <string name="confirm_email_hint">Confirm Email Address</string>
    <string name="last_name_hint">Last Name</string>
    <string name="menu_home">Home</string>
    <string name="menu_maintenance">Schedule</string>
    <string name="menu_activity">Activity</string>
    <string name="menu_triggers">Triggers</string>
    <string name="drawer_option1">Add Custom To-Do</string>
    <string name="drawer_option2">Completed Tasks</string>
    <string name="drawer_option3">Customize Appliances</string>
    <string name="drawer_option4">Claim Rewards</string>
    <string name="drawer_option5">User Profile</string>
    <string name="drawer_option6">Logout</string>
    <string name="heading_add_custom_reminder">Add Custom Reminder</string>
    <string name="field_label_title_required">Title*</string>
    <string name="field_label_notes_not_required">Notes</string>
    <string name="field_label_when">When</string>
    <string name="field_label_how_long">How Long</string>
    <string name="field_label_take_this_action">Take This Action</string>
    <string name="field_label_name_of_action">Name of Action</string>
    <string name="field_label_activate_trigger">Activate</string>
    <string name="rb_email">Email Me</string>
    <string name="rb_notify_me">Notify Me</string>
    <string name="rb_text_me">Text Me</string>
    <string name="rb_smoke">Smoke Sensor</string>
    <string name="rb_moisture">Moisture Sensor</string>
    <string name="rb_flame">Flame Sensor</string>
    <string name="rb_any_level">senses smoke of any levels</string>
    <string name="rb_moderate_level">senses smoke of moderate levels</string>
    <string name="rb_high_level">senses smoke of high levels</string>
    <string name="enter_barcode">Enter Barcode</string>
    <string name="or">or</string>
    <string name="barcode_number">Barcode</string>
    <string name="add_a_smart_product">Add A Smart Product</string>
    <string name="add_a_reminder">Add a Reminder</string>
    <string name="add_triggers">Add Triggers</string>
    <string name="rb_smoke_sensor">Smoke</string>
    <string name="rb_water_sensor">Water</string>
    <string name="rb_moisture_sensor">Moisture</string>
    <string name="choose_appliance">Choose An Appliance    ></string>
    <string name="button_enter">Register Product</string>
    <string name="button_next">></string>
    <string name="title_welcome">Your home rewards program!</string>
    <string name="title_activity_prevention">Prevention</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_rewards">Rewards</string>
    <string name="title_activity_appliances">Appliances</string>
    <string name="title_activity_reminder">Reminder</string>
    <string name="title_activity_detection_base">Detection</string>
    <string name="section_format">Your home section: %1$d</string>
    <string name="nav_group">CSC595 Group1</string>
    <string name="nav_contact">csc595g1@gmail.com</string>
    <string name="title_activity_settings">Settings</string>
    <string name="rewards_button_account_create">Create</string>
    <string name="rewards_button_account_update">Update</string>
    <string name="rewards_button_account_balance">Balance</string>
    <string name="rewards_button_redeem_points">Redeem</string>
    <string name="rewards_section_text">Your home rewards section: %1$d</string>
    <string name="rewards_tango_text">Send feedback to Tango rewards</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_signin">Sign In</string>
    <string name="profile_signup">Sign Up</string>
    <string name="profile_create_account">Create Account</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_reward_points">Points</string>
        <string name="transition_comm_post_to_details">postToDetails</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_register_products">RegisterProducts</string>
    <string name="title_activity_add_triggers">AddTriggers</string>
    <string name="title_activity_when_this_happens">WhenThisHappens</string>
    <string name="title_activity_take_this_action">TakeThisAction</string>
    <string name="turn_on_off_reminders">Turn On/Off Reminders</string>
    <string name="test_smoke_alarms">Test Smoke Alarms</string>
    <string name="change_smoke_alarm_batteries">Change Smoke Alarm Batteries</string>
    <string name="test_carbon_monoxide_alarm">Test Carbon Monoxide Alarm</string>
    <string name="check_fire_extinguisher">Check Fire Extinguisher</string>
    <string name="insect_sump_pump">Inspect Sump Pump</string>
    <string name="clean_insect_washing_machine">Clean/Inspect Washing Machine</string>
    <string name="clean_dryer_vent">Clean Dryer Vent</string>
    <string name="test_home_for_radon">Test Home for Radon</string>
    <string name="maintain_uground_sprinkler_sys">Maintain Underground Sprinkler System</string>
    <string name="check_drain_water_heater">Check/Drain Water Heater</string>
    <string name="hvac_tune_up">HVAC Tune-up</string>
    <string name="clean_gutters">Clean Gutters</string>
    <string name="change_home_air_filters">Change Home Air Filter</string>
    <string name="pool_pump_filter_maintenance">Pool Pump Filter Maintenance</string>
    <string name="generator_maintenance">Generator Maintenance</string>
    <string name="inspect_roof">Inspect Roof</string>
    <string name="tree_timing">Tree Trimming</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="create_notification">Create Notification</string>
    <string name="view_notification">View Notification</string>
    <string name="edit_notification">Edit Notification</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="preference_notification_category">Notification Preferences</string>
    <string name="checkbox_vibrate">Vibrate</string>
    <string name="checkbox_sound">Sound</string>
    <string name="checkbox_LED">LED</string>
    <string name="checkbox_ongoing">Persistent</string>
    <string name="snooze">Snooze</string>
    <string name="snooze_detail">Add a snooze action to the notification</string>
    <string name="snooze_length">Snooze length</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_done_detail">Add a \"Mark as done\" action to the notification</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_about">About</string>
    <string name="action_show_now">Show now</string>
    <string name="action_mark_as_done">Mark as done</string>
    <string name="delete_confirmation">Are you sure you want to delete this notification?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="title">Title</string>
    <string name="save_menu">Save</string>
    <string name="time_now">Now</string>
    <string name="date_today">Today</string>
    <string name="times_shown">Shown %1$d out of %2$d times</string>
    <string name="times_shown_edit">Shown %1$d out of</string>
    <string name="forever">Forever</string>
    <string name="no_repeat">Does not repeat</string>
    <string name="times">times</string>
    <string name="repeat_notification">Number of times to repeat: </string>
    <string name="content_hint">Add notification content</string>
    <string name="select_icon">Select an icon</string>
    <string name="default_icon">Default icon</string>
    <string name="custom_icon">Custom icon</string>
    <string name="select_colour">Select a colour</string>
    <string name="default_colour">Default colour</string>
    <string-array name="colour_names_array">
        <item>Default colour</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Pink</item>
    </string-array>
    <string name="repeats_on">Repeats on:</string>
    <string name="no_active">No active notifications</string>
    <string name="no_inactive">No inactive notifications</string>
    <string name="toast_past_date">Cannot set initial date in the past</string>
    <string name="toast_higher_number">Repeat number must be higher</string>
    <string name="toast_title_empty">Title cannot be empty</string>
    <string name="toast_mark_as_done">Marked next reminder as done</string>
    <string name="libraries">Libraries</string>
    <string name="rate_app">Rate app</string>
    <string name="contact">Contact</string>
</resources>