<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_rewards"
            android:icon="@drawable/ic_menu_rewards"
            android:title="@string/action_rewards" />
        <item
            android:id="@+id/nav_prevention"
            android:icon="@drawable/ic_menu_prevention"
            android:title="@string/action_prevention" />
        <item
            android:id="@+id/nav_appliances"
            android:icon="@drawable/ic_menu_appliances"
            android:title="@string/action_appliances" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/action_profile" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>
