<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/white"
    >


    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="edu.depaul.csc595.jarvis.detection.RegisterProducts">
        <RadioGroup
            android:id="@+id/rb_sensors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp">

            <RadioButton
                android:id="@+id/rb_smoke_sensor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingLeft="15dp"
                android:text="@string/rb_smoke_sensor"
                android:checked="true"
                style="@style/AppTheme.TextHeading.NoCaps.Black"/>


            <RadioButton
                android:id="@+id/rb_water_sensor"
                android:layout_width="fill_parent"
                android:paddingLeft="10dp"
                android:layout_height="wrap_content"
                android:text="@string/rb_water_sensor"
                style="@style/AppTheme.TextHeading.NoCaps.Black"
                />
            <RadioButton
                android:id="@+id/rb_moisture_sensor"
                android:layout_width="fill_parent"
                android:paddingLeft="10dp"
                android:layout_height="wrap_content"
                android:text="@string/rb_moisture_sensor"
                style="@style/AppTheme.TextHeading.NoCaps.Black"
                />

        </RadioGroup>
        <EditText
            android:id="@+id/barcode_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_below="@+id/rb_sensors"
            android:ems="10"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:hint="@string/barcode_number"
            android:paddingBottom="15dp"/>

        <Button
            android:id="@+id/button_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/barcode_number"
            android:text="@string/button_enter"/>




    </RelativeLayout>



</LinearLayout>


