<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    >

    <RadioGroup
        android:id="@+id/sensors"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"

        >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>

        <RadioButton
            android:id="@+id/rb_smoke"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/rb_smoke"
            android:checked="true"
            style="@style/AppTheme.TextHeading.NoCaps.Black"
            />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:visibility="visible">


                <RadioButton
                    android:id="@+id/rb_any_level"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingLeft="15dp"
                    android:text="@string/rb_any_level"
                    android:checked="true"
                    style="@style/AppTheme.TextHeading.NoCaps.Black"/>
                "/>


                <RadioButton
                    android:id="@+id/rb_moderate_level"
                    android:layout_width="fill_parent"
                    android:paddingLeft="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_moderate_level"
                    style="@style/AppTheme.TextHeading.NoCaps.Black"
                    />
                <RadioButton
                    android:id="@+id/rb_high_level"
                    android:layout_width="fill_parent"
                    android:paddingLeft="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_high_level"
                    style="@style/AppTheme.TextHeading.NoCaps.Black"
                    />

            </RadioGroup>


        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>


        <RadioButton
            android:id="@+id/rb_moisture"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:button="@null"
            android:text="@string/rb_moisture"
            android:drawableRight="@android:drawable/btn_radio"
            style="@style/AppTheme.TextHeading.NoCaps.Black"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>
        <RadioButton
            android:id="@+id/rb_smart_outlet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/rb_flame"
            style="@style/AppTheme.TextHeading.NoCaps.Black"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>
    </RadioGroup>

</LinearLayout>