<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="12dp">

        <EditText
            android:id="@+id/name_of_action"
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_height="wrap_content"
            android:hint="@string/field_label_name_of_action"/>

    </LinearLayout>


    <include layout="@layout/border_thin_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/AppTheme.TextHeading.NoCaps.Blue"
            android:text="@string/field_label_when"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            style="@style/AppTheme.TextHeading.NoCaps.Blue"
            android:text="@string/button_next"
            />

    </LinearLayout>


    <include layout="@layout/border_thin_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/AppTheme.TextHeading.NoCaps.Blue"
            android:text="@string/field_label_how_long"/>
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            style="@style/AppTheme.TextHeading.NoCaps.Blue"
            android:text="@string/button_next"
            />

    </LinearLayout>

    <include layout="@layout/border_thin_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/AppTheme.TextHeading.NoCaps.Blue"
            android:text="@string/field_label_take_this_action"/>
        />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            style="@style/AppTheme.TextHeading.NoCaps.Blue"
            android:text="@string/button_next"
            />

    </LinearLayout>

    <include layout="@layout/border_thin_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingRight="10dp">



        <ToggleButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:checked="true" />

    </LinearLayout>



</LinearLayout>