<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RadioGroup
        android:id="@+id/notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end">


        <RadioButton
            android:id="@+id/rb_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_gravity="left"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/rb_email"
            android:checked="true"
            style="@style/AppTheme.TextHeading.NoCaps.Black"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>


        <RadioButton
            android:id="@+id/rb_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_gravity="right"
            android:button="@null"
            android:text="@string/rb_notify_me"
            android:drawableRight="@android:drawable/btn_radio"
            style="@style/AppTheme.TextHeading.NoCaps.Black"/>
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>


        <RadioButton
            android:id="@+id/rb_notification"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_gravity="right"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/rb_text_me"
            style="@style/AppTheme.TextHeading.NoCaps.Black"/>
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>

    </RadioGroup>

</LinearLayout>